完成随机验证码的生成

--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>api-passenger</module>
         <module>cloud-nacos</module>
         <module>service-verificationcode</module>
+        <module>internal-common</module>
     </modules>
     <packaging>pom</packaging>
     <dependencies>
