--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>cloud-nacos</module>
         <module>service-verificationcode</module>
         <module>internal-common</module>
+        <module>service-passenger-user</module>
     </modules>
     <packaging>pom</packaging>
     <dependencies>
@@ -24,6 +25,11 @@
             <artifactId>json-lib</artifactId>
             <version>2.4</version>
             <classifier>jdk15</classifier>
+        </dependency>
+        <dependency>
+            <groupId>com.mashibing</groupId>
+            <artifactId>internal-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
     <dependencyManagement>
