--- a/service-passenger-user/src/main/resources/application.yml
+++ b/service-passenger-user/src/main/resources/application.yml
@@ -8,3 +8,7 @@ spring:
     url: jdbc:mysql://localhost:3306/service-passenger-user?serverTimezone=UTC&useUnicode=true&characterEncoding=utf8&useSSL=false
     username: root
     password: root
+  cloud:
+    nacos:
+      discovery:
+        server-addr: 127.0.0.1:8848
